Target Java 25
The repository already contradicted its own documentation here: both runtime
images have shipped on an `eclipse-temurin:25-jre-alpine` base for several
releases and the backend builder stage on a JDK 26 Maven image, so the JAR was
already executing on a JVM 25 while `CLAUDE.md` and `CONTRIBUTING.md` stated
that Flink 2.x supported "Java 17/21, not 25". This moves the bytecode target
and the build toolchain; the runtime had already moved.

- `pom.xml`: `java.version` 21 -> 25, and `requireJavaVersion` raised to match
  so a JDK 21 is refused at `validate` rather than discovered at the first
  Flink test.
- `ci.yml`, `release.yml`, `codeql.yml`: setup-java 21 -> 25.
- `docker-compose-build.yml`: `maven:3.9-eclipse-temurin-21` -> `-25`.
- Docs, badges and `build.bat` prerequisites follow, and the two files that
  asserted Flink 2.x cannot run on 25 now state what is true.

Verified: `mvn -P '!build-frontend' test` on JDK 25 compiles with
`javac [debug parameters release 25]` (class file major 69) and runs 489 tests
green, 4 skipped (Testcontainers, no Docker daemon). No `--add-opens` is added:
the two warnings that appear belong to dependencies — Flink's shaded Guava
reaching for `sun.misc.Unsafe::objectFieldOffset`, and Testcontainers' JNA for
a restricted `System::load` — and a flag added pre-emptively outlives its
reason.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01YNGbCW8FaLRP4hh9BetHmn